@@ -57,7 +57,7 @@
         <tal:comment replace="nothing">Create a new item</tal:comment>
         <a id="newItemCreation" href="#"
            style="display: inline;"
-           tal:condition="userIsAmongCreators"
+           tal:condition="not:meetingConfig/getItemCreatedOnlyUsingTemplate"
            tal:attributes="href string:${meetingFolder/absolute_url}/createObject?type_name=MeetingItem${meetingConfig/getShortName};">
             <img tal:attributes="src string: $portal_url/new.png"
               title="create_meeting_item" i18n:attributes="title" />
@@ -65,7 +65,7 @@
         <tal:comment replace="nothing">Create a new item from a template</tal:comment>
         <a id="newTemplateItemCreation" class="link-overlay-pm" style="display: inline; padding-left: 0;"
            href="@@createitemfromtemplate" tal:attributes="href string:${meetingFolder/absolute_url}/@@createitemfromtemplate"
-           tal:condition="python: userIsAmongCreators and templateItems">
+           tal:condition="templateItems">
         <img style="cursor:pointer"
              tal:attributes="src string: $portal_url/new_from.png"
              title="create_meeting_item_from_template"
