@@ -274,6 +274,7 @@ class MeetingConfigDescriptor(Descriptor):
         # the identifier of the current form may be specified here
         # (ie 'P5', 'CC00_06'...)
         self.configVersion = ''
+        self.itemCreatedOnlyUsingTemplate = False
         self.enableAnnexToPrint = False
 
         # Data-related parameters ----------------------------------------------
