@@ -84,6 +84,9 @@
           <td tal:define="field python:here.getField('configVersion')">
             <span metal:use-macro="here/widgets/field/macros/view" />
           </td>
+          <td tal:define="field python:here.getField('itemCreatedOnlyUsingTemplate')">
+            <span metal:use-macro="here/widgets/field/macros/view" />
+          </td>
         </tr>
         <tr valign="top">
           <td tal:define="field python:here.getField('enableAnnexToPrint')">
