@@ -141,6 +141,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Ease management of late items, an item is now by default considered late if the meeting is in a late
   state and the available item is validated and the meeting is his preferred meeting
 - Display warnings if annex file size is too large
+- Added parameter MeetingConfig.itemCreatedOnlyUsingTemplate that will do user only able
+  to create new items using an item template, no more item from scratch
 
 3.2.0.1 (2014-03-06)
 --------------------
